src/app.styles.scss
$main-color: #ea3322;
$main-color-ghost: rgba(234, 51, 34, 0.5);
$secondary-color: #34434a;
$main-blue: #2278EA;
$grey-light: #f9f9f9;
$grey-normal: #979797;
$grey-normal-2: #8F8F8F;
$grey-darker: #eeefef;


///////////////////////////////////// MAIN
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Montserrat', sans-serif;
}

.app {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;

  min-height: 100vh;
  padding: 0px 15%;

  background-image: url('./assets/images/bg.jpeg'), linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
  background-size: cover;
  background-position: center;
}

main {
  background-color: rgba(245, 245, 245, 0.8);
  backdrop-filter: blur(9px);
  border-radius: 7px;
  box-shadow: -4px 6px 16px 3px rgba(0,0,0,0.20);

  svg {
    display: block;
    margin: auto;
    height: 25px;
    margin-top: 25px;
    margin-bottom: 25px;
  }
}



// ======================================== SEARCH BOX ========================================

.search-box  {
  display: flex;
  justify-content: center;

  .search-bar {
    width: 70%;
    padding: 15px;
  
    text-align: center;
    appearance: none;
    background: none;
    border: none;
    outline: none;
    color: $secondary-color;
    font-size: 20px;

    border-bottom: 2px solid $secondary-color;

    transition: all .2s cubic-bezier(0.645, 0.045, 0.355, 1);
  }

  .search-bar::placeholder {
    color: $secondary-color;
    transition: all .2s cubic-bezier(0.645, 0.045, 0.355, 1);
  }
}


// ======================================== LOCATION ========================================

.location-box {
  margin-top: 70px;

  .location {
    color: $main-color;
    font-weight: 600;
    font-size: 39px;
    text-align: center  ;
  }

  .date {
    color: $secondary-color;
    font-size: 17px;
    font-weight: 100;
    text-align: center;
  }
}



.weather-box {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  text-align: center;

  .temp-box{
    
    .temp {
      position: relative;
      display: inline-block;
    
      padding: 15px 25px;
    
      color: $secondary-color;
      font-size: 140px;
      font-weight: 700;
      text-align: center;
    }

    span {
      color: $main-color-ghost;
      font-size: 140px;
      font-weight: 700;
      margin-left: -57px;
    }

  }
  
  .min-max{
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 55px;
    font-weight: 100;
    margin-bottom: 15px;
  
    .min {
      padding: 15px 20px;
      color: $main-blue;
      margin-right: 15px;
      border-radius: 15px;
    }
  
    .max{
      padding: 15px 20px;
      border-radius: 15px;
      color: $main-color;
    }
  }

  sup {
    font-size: 19px;
    font-weight: 700;
  }
}


.weather {
  color: transparent;
  font-size: 48px;
  font-weight: 700;
}


.scale-input {
  background-color: white;
  color: black;
  border-radius: 100px;
  padding: 20px;
  margin-left: 10px;
  outline: none;
  border: none;
  cursor: pointer;
}

.info {
  /*margin: 18px 35% 0;*/
  margin-top: 25px;
  padding: 10px;
  border-radius: 15px 0 15px 0;
  /*background: linear-gradient(90deg, rgb(255, 231, 16) 9%, rgba(255, 255, 255, 0.493) 9%);*/
  background-color: rgba(255, 255, 255, 0.5);
  color: black;
}
 
.bar {
  margin-left: 15px;
  height: 180px;
  width: 2px;
  background-color: $secondary-color;
  border: 1px solid $secondary-color;
}

.ad-info {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 35px;

  .info-title {
    color: $grey-normal-2;
    font-weight: 500;
    margin-left: 45px;
  }

  .info-text {
    color: $secondary-color;
    font-weight: 600;
    margin-bottom: 25px;
    margin-left: 45px;
  }

  .tab-2 {
    margin-left: 120px;
  }

}

img {
  position: absolute;
  float: left;
  margin-top: 6px;
}

#info {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-bottom: 45px;
}

.conditions {
  margin-left: 150px;
  font-weight: 700;
  text-align: center;

  i {
    font-size: 90px;
    margin-bottom: 25px;
    color: $main-color;
  }

  &-name {
    color: #8F8F8F;
    font-weight: 500;
  }
}

// =================== MIXINS =====================

@media only screen and (max-width: 1000px) {
  .app {
    padding: 0;
  }

}

@media only screen and (max-width: 650px) {

  main {
    overflow: hidden;
    border-radius: 0;
  }


  svg {
    display: none !important;
  }

 #info {
   display: block;
 } 

  .conditions {
    margin-left: 0;

    i {
      font-size: 70px;
      margin-top: 10px;
    }
  }
}

